support JDK 8